--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,8 @@
   --background-color: #808060;
   --background-color-light: #a0a080;
   --background-color-translucent: rgba(160, 160, 128, 0.5); /*same as background-color-light, but translucent*/
-  --footer-background: #404040;
+  --footer-background-color: #404040;
+  --footer-text-color: #aaa;
   
 
   font-size: 60%;
@@ -17,6 +18,7 @@ body, h1, p {
 
 p {
   font-family: 'Montserrat', sans-serif;
+  font-size: 1.6rem;
 }
 
 header, .title-background {
@@ -34,7 +36,7 @@ header {
 }
 
 .title-background {
-  height: 12rem;
+  height: 15rem;
   width: 100%;
   background-color: var(--background-color-translucent);
   margin-top: 24rem;
@@ -44,6 +46,7 @@ header {
   color: var(--main-title-color);
   font-size: 3.2rem;
   font-family: 'Rowdies', cursive;
+  text-align: center;
 }
 
 .subtitle {
@@ -52,9 +55,21 @@ header {
   text-shadow: 0 0 2px var(--main-title-color);
 }
 
+.material-icons.md-120 { 
+  font-size: 120px;
+  position: absolute;
+  bottom: 0;
+  margin: -30px;
+  color: var(--main-text-color);
+  opacity: 80%;
+}
+
 section {
   background-color: var(--background-color);
   padding: 3.2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 section:nth-child(odd) {
@@ -62,8 +77,57 @@ section:nth-child(odd) {
 }
 
 section p {
-  max-width: 720px;
-  margin: auto;
+  max-width: 480px;
   font-size: 1.6rem;
   color: var(--main-text-color);
+  text-align: justify;
+}
+
+section i {
+  margin-bottom: 2.4rem;
+}
+
+section .material-icons {
+  color: var(--main-text-color);
+}
+
+footer {
+  padding: .5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--footer-background-color);
+}
+
+footer .material-icons {
+  color: var(--footer-text-color);
+}
+
+footer p {
+  margin-left: .2rem;
+  font-size: 1.2rem;
+  color: var(--footer-text-color);
+}
+
+@media(min-width:720px ) {
+  .main-title {
+    font-size: 3.6rem;
+  }
+
+  .subtitle, section p {
+    font-size: 2rem;
+  }
+
+  section {
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  section:nth-child(odd) {
+    flex-direction: row-reverse;
+  }
+
+  section i {
+    margin: 3.6rem;
+  }
 }
